##Text encoding: utf-8

2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
	
2006-05-08  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* programs/gchem3d-viewer.c: Fixed a compilation warning using a
	typecast.

2006-05-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.6.2).

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/Makefile.am: Fixed prefix to add to manpages in check
	target.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* acinclude.m4: Remove some obsolete stuff.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/Makefile.am: Fixed man-usage in the check target. Removed
	gcu_entities.dtd as prerequisite.
	* docs/man/gchemcalc.1: Updated.
	* docs/man/gchemtable.1: Ditto.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/Makefile.am: Made xmllint and man check optional.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchemcalc.1: Updated.
	* docs/man/gchemtable.1: Ditto.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* Add a test on xmllint's version.

2006-05-06  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* acinclude.m4: Added 3 macros necessary for man target applications.
	* configure.ac: Call the macros and fixed the AC_OUTPUT.
	* programs/Makefile.am: Added missing MAINTAINERCLEANFILES target.
	* docs/Makefile.am (SUBDIRS): Added man directory.
	* docs/man/Makefile.am: Initially added.
	* docs/man/gcu_entities.dtd.in: Ditto.
	* docs/man/gchem3d-viewer.1: Ditto.
	* docs/man/gchem3d-viewer.1.xml: Ditto.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1: Ditto.
	* docs/man/gchemtable.1.xml: Ditto.
	* docs/man/libgcu.3: Ditto.
	* docs/man/libgcu.3.xml: Ditto.

2006-04-23  Daniel Leidert  <daniel.leidert.spam@gmx.net>