@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2006-07-15  Daniel Leidert  <daniel.leidert.spam@gmx.net>
+	* docs/man/gchem3d-viewer.1.xml: Added more information about the
+	program, completing the options section.
+
 2006-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
 	* configure.ac: fixed mozilla-config use (thanks to Pav Lucistnik).
 	
